[gd_scene load_steps=17 format=2]

[ext_resource path="res://Assets/Player/KritaTest2.png" type="Texture" id=1]
[ext_resource path="res://Assets/Audio/SFX/playerShoot_vers05.wav" type="AudioStream" id=2]
[ext_resource path="res://Assets/Audio/SFX/menu_select.wav" type="AudioStream" id=3]
[ext_resource path="res://Prefabs/Player/Player.gd" type="Script" id=4]
[ext_resource path="res://Prefabs/Projectiles/Projectiles.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Audio/SFX/playerBomb03.wav" type="AudioStream" id=6]
[ext_resource path="res://Assets/Player/PlayerProto.tres" type="SpriteFrames" id=7]
[ext_resource path="res://Assets/Player/PlayerHitbox.tres" type="SpriteFrames" id=8]
[ext_resource path="res://Assets/Player/HitboxAnimation.tres" type="Animation" id=9]
[ext_resource path="res://Assets/Enemies/Shadow.png" type="Texture" id=10]
[ext_resource path="res://Assets/Player/Version1a.png" type="Texture" id=11]
[ext_resource path="res://Assets/Player/Version1b.png" type="Texture" id=12]
[ext_resource path="res://Assets/Player/Version1c.png" type="Texture" id=13]

[sub_resource type="StreamTexture" id=1]
resource_local_to_scene = true
flags = 4
load_path = "res://.import/25x25x9 Round Bullets.png-40ea70743577d06d82be62f15b88b8f3.stex"

[sub_resource type="AtlasTexture" id=2]
resource_local_to_scene = true
flags = 4
atlas = SubResource( 1 )
region = Rect2( 150, 0, 25, 25 )

[sub_resource type="CircleShape2D" id=3]
radius = 4.0

[node name="Player" type="Node2D"]
script = ExtResource( 4 )
__meta__ = {
"_editor_description_": ""
}
BULLET_PROJECTILE = ExtResource( 5 )

[node name="sfx_playerShoot" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
bus = "Player Shoot"

[node name="sfx_playerBomb" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "Player Bomb"

[node name="sfx_playerHit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = 16.0
pitch_scale = 0.66
bus = "Sound FX"

[node name="Shadow" type="Sprite" parent="."]
position = Vector2( 0, 18 )
scale = Vector2( 1.25, 2 )
texture = ExtResource( 10 )

[node name="CoreV1" type="Sprite" parent="."]
visible = false
position = Vector2( 0, 8 )
scale = Vector2( 0.134523, 0.134523 )
texture = ExtResource( 1 )

[node name="CoreV2" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0, 12 )
scale = Vector2( 0.66, 0.66 )
frames = ExtResource( 7 )
animation = "Spread"

[node name="CoreV3" type="Sprite" parent="."]
visible = false
position = Vector2( 0, 18 )
scale = Vector2( 0.66, 0.66 )
texture = ExtResource( 11 )

[node name="CoreV3a" type="Sprite" parent="."]
modulate = Color( 1, 0.95, 0.9, 1 )
position = Vector2( 0, 18 )
scale = Vector2( 0.66, 0.66 )
texture = ExtResource( 12 )

[node name="CoreV3b" type="Sprite" parent="."]
position = Vector2( 0, -23.58 )
scale = Vector2( 0.66, 0.66 )
texture = ExtResource( 13 )

[node name="HitboxV1" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.5, 0.5 )
texture = SubResource( 2 )

[node name="HitboxV2" type="AnimatedSprite" parent="."]
scale = Vector2( 0.75, 0.75 )
frames = ExtResource( 8 )
animation = "Glowing"
frame = 1
playing = true

[node name="PlayerCollisionArea" type="Area2D" parent="."]
input_pickable = false
collision_layer = 4
collision_mask = 24

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerCollisionArea"]
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../HitboxV2")
method_call_mode = 1
anims/HitboxAnimation = ExtResource( 9 )
[connection signal="area_entered" from="PlayerCollisionArea" to="." method="on_collision_start"]
